packages/pond/src/snapshots/pond__tests__help_skill.snap
---
source: src/main.rs
expression: sub.render_long_help().to_string()
---
Print the bundled SKILL.md - the agent-onboarding pointer for pond.

The same file an agent loads as a skill, emitted to stdout so it stays in lockstep with the binary (no separate copy to drift).

Usage: pond skill [OPTIONS]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --storage-path <URL>
          Storage destination: a local path or remote URL.
          
          Accepts a bare path, `~/path`, `file://`, `s3://bucket/prefix`, `s3+https://host/bucket/prefix`, `gs://`, `az://`, or the keyword `local` (the platform default local data dir). Default: `[storage].path` from config, then the platform data dir (`~/.local/share/pond`).
          
          [env: POND_STORAGE_PATH]

      --config-file <PATH>
          Config file to read (default: `~/.config/pond/config.toml`)
          
          [env: POND_CONFIG_FILE]

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity
